--- a/opdrachten.html
+++ b/opdrachten.html
@@ -8,46 +8,96 @@
     <link rel="stylesheet" href="css/puppy-styles.css">
 </head>
 
-<body class="mx-4">
-<h1 class="lettergrootte-40 grijsblauw mt-4">Opdrachten Bootstrap CoderDojo</h1><br /><br />
-<h2 class="lettergrootte-40 grijsblauw">Opdracht 1</h2>
-<p class="lettergrootte-28">
-De programmeur heeft de basis voor de website Puppy Love gemaakt. Kijk maar in het bestand index.html. Maar het ziet er nog niet erg mooi
-uit, vind je ook niet? Aan jou de taak om de website er beter uit te laten zien! Dat ga je doen met Bootstrap. <br />
-Om Bootstrap te kunnen gebruiken moet je het normaal gesproken eerst downloaden en zorgen dat de browser weet dat je het wil gebruiken.
-Maar nu hebben we dat al voor je gedaan: in het mapje css vind je het Bootstrap bestand: bootstrap.min.css. Dit bestand is klein gemaakt door
-onder andere de spaties te verwijderen. Het is daardoor niet zo goed leesbaar. Maar alle informatie over Bootstrap kun je vinden op de
-<a href="https://getbootstrap.com/docs/4.2/getting-started/introduction/" target="_blank">Bootstrap</a> website. <br />
-In het bestand index.html vind je deze regel: &lt;link rel="stylesheet" href="css/bootstrap.min.css"&gt;. Hiermee is aangegeven dat de
-browser Bootstrap moet gebruiken. <br /><br />
+<body class="mx-4" style="font-size: 20px;">
+    <h1 class="grijsblauw mt-4">Opdrachten Bootstrap CoderDojo</h1><br />
+    <p>
+        De programmeur heeft de website Puppy Love gemaakt. Kijk maar
+        <a href="https://ciskavs.github.io/puppy-love/index.html" target="_blank">hier</a>. Maar het ziet er nog niet erg mooi uit, vind je ook niet? Aan jou de taak om de website er beter uit te laten zien! Dat ga je doen met Bootstrap.
+    </p>
+    <br />
 
-Aan de slag!
-<ul class="lettergrootte-28">
-  <li>In het bestand 'Ontwerp website puppy love.pdf' kun je het voorbeeld zien van hoe de website eruit moet komen te zien.</li>
-  <li>De code die je aan moet passen staat in index.html. Je hoeft zelf geen HTML te schrijven en ook geen CSS.</li>
-  <li>Met Bootstrap kun je niet de hele website opmaken. Om de grootte, kleur en type van de letters goed te zetten gebruik je het
-    css bestand puppy-styles.css. Je kunt de namen van de classes op dezelfde manier gebruiken als je classes van Bootstrap gebruikt.</li>
-  </ul>
-</p>
-<br />
+    <h2 class="grijsblauw" style="background-color: blanchedalmond;">Opdracht 1 - bouw het ontwerp na</h2><br />
 
-<h2 class="lettergrootte-40 grijsblauw">Opdracht 2</h2>
-<p class="lettergrootte-28">
-Nu de website er op een groot scherm goed uitziet, gaan we de website 'responsive' maken. Responsive betekent dat de website er goed
-uitziet op verschillende apparaten, zoals op destop computerschermen, tablets en mobiele telefoons. Maak je scherm maar eens kleiner.
-Ziet dat er goed uit? Als je nog wel wat verbeterpuntjes ziet, dan is deze opdracht voor jou!<br/>
-In de vorige opdracht heb je voor 'Mijn favoriete puppies' steeds drie honden naast elkaar laten zien. Maar op kleinere schermen (768-960 px)
-willen we dat dat er nog maar twee zijn. En op nog kleinere schermen (&lt; 768px) moeten de honden onder elkaar komen, zodat je op een
-mobiele telefoon niet naar rechts hoeft te scrollen om alle honden te kunnen zien. Voor deze opdracht heb je het
-<a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_blank">grid systeem van Bootstrap</a> nodig.
-</p>
-<br />
+    <h3 class="grijsblauw">Stap 1: Code downloaden</h3>
+    <p>
+        De code die je straks gaat aanpassen kun je vinden op
+        <a href="https://github.com/ciskavs/puppy-love" target="_blank">Github</a>. Klik op de groene knop 'Clone or Download' en download het zip bestand. Pak het daarna uit.
+    </p>
+    <br />
 
-<h2 class="lettergrootte-40 grijsblauw">Opdracht 3</h2>
-<p class="lettergrootte-28">
-De website Puppy Love ziet er nu helemaal uit zoals in het voorbeeld èn ziet er goed uit op verschillende apparaten. Maar je hebt vast wel
-leuke ideeën om 'm nóg mooier te maken. Maak er met behulp van Bootstrap wat moois van!
-</p>
+    <h3 class="grijsblauw">Stap 2: Project openen in editor </h3>
+    <p>
+        Open de editor van jouw keuze (bv. Sublime of Atom of een andere editor) en open daarin het project dat je net gedownload hebt. Als het goed is zie je een map 'css' en een map 'images' en een aantal bestanden, waaronder index.html.
+    </p>
+    <br />
+
+    <h3 class="grijsblauw">Stap 3: Bootstrap gebruiken</h3>
+    <p>
+        Om Bootstrap te kunnen gebruiken moet je het normaal gesproken eerst downloaden en zorgen dat de browser weet dat je het wil gebruiken. Maar nu hebben we dat al voor je gedaan: in het mapje css vind je het Bootstrap bestand: bootstrap.min.css. Dit bestand
+        is klein gemaakt door onder andere de spaties te verwijderen. Het is daardoor niet zo goed leesbaar. Maar alle informatie over Bootstrap kun je vinden op de
+        <a href="https://getbootstrap.com/docs/4.2/getting-started/introduction/" target="_blank">Bootstrap</a> website. <br /> In het bestand index.html vind je deze regel: &lt;link rel="stylesheet" href="css/bootstrap.min.css"&gt;. Hiermee is aangegeven
+        dat de browser Bootstrap moet gebruiken.
+    </p>
+    <br />
+
+    <h3 class="grijsblauw">Stap 4: Aan de slag!</h3>
+    <ul>
+        <li>In het bestand <a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf">ontwerp.pdf</a> kun je het voorbeeld zien van hoe de website eruit moet komen te zien.</li>
+        <li>De code die je aan moet passen staat in index.html. Je hoeft zelf geen HTML te schrijven en ook geen CSS.</li>
+        <li>Met Bootstrap kun je niet de hele website opmaken. Om de grootte, kleur en type van de letters goed te zetten gebruik je het css bestand puppy-styles.css. Je kunt de namen van de classes op dezelfde manier gebruiken als je classes van Bootstrap
+            gebruikt.
+        </li>
+    </ul>
+    <p>
+        <b>Tip:</b> de meeste programmeurs maken de website stap voor stap op. Eerst zetten ze alles op de goede plaats (door het gebruik van het Grid (Rooster) uit Bootstrap). Daarna gaan ze de details invullen, zoals de kleur en grootte van de letters
+        en de afstanden tussen plaatjes en tekst.
+    </p>
+    <br />
+
+    <h2 class="grijsblauw" style="background-color: blanchedalmond;">Opdracht 2 - Responsive maken</h2><br />
+    <p>
+        Nu de website er op een groot scherm goed uitziet, gaan we de website 'responsive' maken. Responsive betekent dat de website er goed uitziet op verschillende apparaten, zoals op desktop computerschermen, tablets en mobiele telefoons. Open wat je in opdracht
+        1 hebt gemaakt en maak je scherm maar eens kleiner. Ziet dat er goed uit? Als je nog wel wat verbeterpuntjes ziet, dan is deze opdracht voor jou!<br/> <br /> Voor deze opdracht heb je het
+        <a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_blank">grid systeem (rooster) van Bootstrap</a> nodig.
+    </p>
+    <br />
+    <h3 class="grijsblauw">Stap 1: mobiele telefoons</h3>
+    <p>
+        In de vorige opdracht heb je voor 'Mijn favoriete puppies' steeds drie puppies naast elkaar laten zien. Maar op een mobiele telefoon passen er geen drie plaatjes van puppies naast elkaar. Dan moet je naar rechts scrollen om alle plaatjes te kunnen zien.
+        Dat willlen we natuurlijk niet! Op mobiele telefoons willen we ze liever onder elkaar zien. Kun je dat maken?
+        <br /><br />
+        <b>Tip: </b> gebruik voor de kleinste schermen (&lt; 768px) 'xs', bijvoorbeeld col-xs-12.
+    </p>
+    <br />
+    <h3 class="grijsblauw">Stap 2: tablets</h3>
+    <p>
+        Tablets zijn kleiner dan desktop schermen en net als de mobiele telefoon passen er geen drie plaatjes naast elkaar zonder dat je hoeft te scrollen naar rechts. Maar als de plaatjes onder elkaar staan, is er steeds veel witruimte naast de plaatjes. Ook
+        niet zo mooi. Kun jij het zo maken dat er op tablets steeds twee plaatjes naast elkaar staan?
+        <br /><br />
+        <b>Tip: </b> gebruik voor tablets (768-960 px) 'md', bijvoorbeeld col-md-6.
+    </p>
+    <br />
+
+    <h2 class="grijsblauw" style="background-color: blanchedalmond;">Opdracht 3</h2><br />
+    <p>
+        De website Puppy Love ziet er nu helemaal uit zoals in het voorbeeld èn ziet er goed uit op verschillende apparaten. Maar je hebt vast wel leuke ideeën om 'm nóg mooier te maken. Maak er met behulp van Bootstrap wat moois van!
+        <br /><br /> Om je wat ideeën te geven:
+        <ul>
+            <li>
+                Maak van elke favoriete puppy een kaartje. Het kaartje heeft een gekleurde rand en in het kaartje
+                 staat het plaatje van de puppy, zijn naam, de informatie tekst en een link naar Wikipedia.
+                  Hiervoor heeft Bootstrap <a href="https://getbootstrap.com/docs/4.0/components/card/" target="_blank">card</a>. (Je moet zelf ook wat HTML schrijven)
+            </li>
+            <li>
+                Maak een slideshow van puppy plaatjes.
+                Hiervoor heeft Bootstrap
+                <a href="https://getbootstrap.com/docs/4.0/components/carousel/"
+                    target="_blank">carousel</a>. ( Je moet zelf ook wat HTML schrijven)
+            </li>
+        </ul>
+    </p>
+    <br /><br />
 
 </body>
+
 </html>
