opdrachten puntjes op i

--- a/opdrachten.html
+++ b/opdrachten.html
@@ -14,7 +14,7 @@
         De programmeur heeft de website Puppy Love gemaakt. Kijk maar
         <a href="https://ciskavs.github.io/puppy-love/index.html" target="_blank">hier</a>. Maar het ziet er nog niet erg mooi uit,
         vind je ook niet? Aan jou de taak om de website er beter uit te laten zien! Dat ga je doen met Bootstrap.
-        Zo moet het eruit komen te zien: <a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf" target="_blank">Ontwerp puppy love website</a>.
+        Zo moet het eruit komen te zien: <a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf" target="_blank">Ontwerp Puppy Love website</a>.
     </p>
     <br />
 
@@ -24,15 +24,15 @@
     <p>
         De code die je straks gaat aanpassen kun je vinden op
         <a href="https://jsbin.com/vaxahud/edit?html,output" target="_blank">jsbin.com</a>.
-        Aan de linker kant staat de HTML code die je moet aanpassen. Rechts zie je hoe het er uit komt te zien op de website.
-        Als je gaat typen komt er een tekst in beeld die vraagt of je een kopie wil maken om jouw aanpassingen te bewaren.
+        Aan de linker kant staat de HTML code die je moet aanpassen. Rechts zie je hoe het er uit komt te zien op de website.<br />
+        Als je gaat typen in het HTML vak komt er een tekst in beeld die vraagt of je een kopie wil maken om jouw aanpassingen te bewaren.
         Klik op 'Clone your own copy' om dat te doen. Zet deze pagina vervolgens in je Favorieten, zodat je 'm niet kwijt kunt raken.
     </p>
     <br />
 
     <h3 class="grijsblauw">Stap 2: Bootstrap gebruiken</h3>
     <p>
-        Als je Bootstrap wilt gebruiken moet je dat aan de browser laten weten. Dat gebeurt in de code met deze regel:<br />
+        Als je Bootstrap wilt gebruiken moet je dat aan de browser laten weten. Dat gebeurt in de code met deze regel:
         <pre>
           &lt;link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" type="text/css" /&gt;
         </pre>
@@ -46,11 +46,11 @@
 
     <h3 class="grijsblauw">Stap 3: Aan de slag!</h3>
     <ul>
-        <li><a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf">Ontwerp website puppy love</a>: hier kun je het voorbeeld zien van
+        <li><a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf">Ontwerp website Puppy Love</a>: hier kun je het voorbeeld zien van
           hoe de website eruit moet komen te zien.</li>
         <li>De code die je aan moet passen staat in <a href="https://jsbin.com/vaxahud/edit?html,output" target="_blank">jsbin.com</a> onder
            de kop 'HTML' aan de linker kant van het scherm.</li>
-        <li>Je hoeft zelf geen HTML te schrijven en ook geen CSS. Je gaat de Bootstrap classes toevoegen aan de HTML.</li>
+        <li>Je hoeft zelf geen HTML te schrijven en ook geen CSS. Je gaat de Bootstrap classes toevoegen aan de HTML. Dat doe je met class="" in het HTML element, weet je nog?</li>
         <li>Met Bootstrap kun je niet de hele website opmaken. Om de grootte, kleur en type van de letters goed te zetten gebruik je
           de class namen zoals in het CSS bestand staan (klik op de tab CSS om deze te zien).
           Je kunt de namen van de classes op dezelfde manier gebruiken als je classes van Bootstrap gebruikt.
@@ -91,7 +91,7 @@
     <br />
     <h3 class="grijsblauw">Stap 3: op alle aparaten goed?</h3>
     <p>
-        Open de puppy love website weer in 'Live preview' en maak het scherm groter en kleiner. Ziet het er nu wel goed uit als het scherm
+        Open de Puppy Love website weer in 'Live preview' en maak het scherm groter en kleiner. Ziet het er nu wel goed uit als het scherm
         klein is, iets groter, nog groter en op z'n grootst? Dan heb je het goed gedaan!
     </p>
     <br />
