open links in ander tabblad

--- a/opdrachten.html
+++ b/opdrachten.html
@@ -46,7 +46,7 @@
 
     <h3 class="grijsblauw">Stap 3: Aan de slag!</h3>
     <ul>
-        <li><a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf">Ontwerp website Puppy Love</a>: hier kun je het voorbeeld zien van
+        <li><a href="https://ciskavs.github.io/puppy-love/ontwerp.pdf" target="_blank">Ontwerp website Puppy Love</a>: hier kun je het voorbeeld zien van
           hoe de website eruit moet komen te zien.</li>
         <li>De code die je aan moet passen staat in <a href="https://jsbin.com/vaxahud/edit?html,output" target="_blank">jsbin.com</a> onder
            de kop 'HTML' aan de linker kant van het scherm.</li>
